# Kinematics

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  computeNext.m  package.xml  potential_controller.mlx
include/: config.hpp  controllers.hpp  kinematics.hpp  link_attacher.hpp  robot.hpp  ros.hpp  se3.hpp  utils.hpp
include/tasks/: task.hpp  task1.hpp
matlab scripts/: LM.mlx  LM_method.m
msg/: DesiredPose.msg
src/: controllers.cpp  kinematics.cpp  kinematics_node.cpp  link_attacher.cpp  robot.cpp  ros.cpp  se3.cpp  utils.cpp
src/tasks/: task0.cpp  task01.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
srv/: Task.srv
